<resources>
    <string name="app_name">Class</string>
    <string name="hello">Hello Andriod!</string>
    <string name="hint_text">Please input something</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="green">green</string>
    <string name="blue">blue</string>
    <string name="red">red</string>

    <string-array name="myarry">
        <item>Kate</item>
        <item>Jane</item>
        <item>lily</item>
        <item>mike</item>
    </string-array>
</resources>