<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListAcitivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:id="@+id/tv1"
        tools:ignore="MissingConstraints" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/et1"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rg1"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal">


    <RadioButton
        android:id="@+id/rb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        app:layout_constraintTop_toBottomOf="@+id/et1"
        tools:ignore="MissingConstraints" />

    <RadioButton
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        app:layout_constraintBottom_toBottomOf="@+id/et1"
        app:layout_constraintLeft_toRightOf="@+id/rb1" />

    </RadioGroup>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff0000"
        android:text="@string/red"
        android:id="@+id/cb1"
        app:layout_constraintTop_toBottomOf="@id/et1"
        app:layout_constraintLeft_toRightOf="@+id/rg1"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#7BFF00"
        android:text="@string/green"
        android:id="@+id/cb2"
        app:layout_constraintTop_toBottomOf="@id/et1"
        app:layout_constraintLeft_toRightOf="@+id/cb1"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00EAFF"
        android:id="@+id/cb3"
        android:text="@string/blue"
        app:layout_constraintTop_toBottomOf="@id/et1"
        app:layout_constraintLeft_toRightOf="@+id/cb2"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg1"
        android:entries="@array/myarry"
        />


    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv1"
        android:entries="@array/myarry"
        app:layout_constraintTop_toBottomOf="@+id/sp1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv2"
        app:layout_constraintTop_toBottomOf="@+id/lv1"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="show"
        android:id="@+id/btn1"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@+id/lv2"
        />



</androidx.constraintlayout.widget.ConstraintLayout>